Fix text/image alignment issue

--- a/packages/tender-app/src/components/Home/home.scss
+++ b/packages/tender-app/src/components/Home/home.scss
@@ -35,7 +35,7 @@
 }
 
 .friends {
-  margin: 90px 10%;
+  margin: 20% 10%;
   line-height: 1.5;
   font-weight: 900 !important;
 }
